2017-10-03  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222779. rdar://problem/34706688

    2017-10-03  Brent Fulgham  <bfulgham@apple.com>

            [Mac] Use safer decoding practices for NSKeyedUnarchiver
            https://bugs.webkit.org/show_bug.cgi?id=175887
            <rdar://problem/33435281>

            Reviewed by Daniel Bates.

            Mark two tests as flaky for now, until the relevant CFNetwork changes are available on the test systems.
            1. webarchive/loading/cache-expired-subresource.html
            2. webarchive/loading/test-loading-archive-subresource-null-mimetype.html

            * platform/ios/TestExpectations:
            * platform/mac/TestExpectations:

2017-10-01  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222588. rdar://problem/34717517

    2017-09-27  Myles C. Maxfield  <mmaxfield@apple.com>

            Minimum font size may cause elements to have an infinite line-height
            https://bugs.webkit.org/show_bug.cgi?id=177573
            <rdar://problem/34573792>

            Reviewed by Dan Bernstein.

            * fast/text/line-height-minimumFontSize-text-small-font-size-expected.txt: Added.
            * fast/text/line-height-minimumFontSize-text-small-font-size.html: Added.

2017-09-27  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222576. rdar://problem/34553953

    2017-09-27  Myles C. Maxfield  <mmaxfield@apple.com>

            "Tag" codepoints require the complex text codepath
            https://bugs.webkit.org/show_bug.cgi?id=177251
            <rdar://problem/34384001>

            Reviewed by David Hyatt.

            * fast/text/flag-codepoint-expected.html: Added.
            * fast/text/flag-codepoint.html: Added.

2017-09-26  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222539. rdar://problem/34205774

    2017-09-26  Zalan Bujtas  <zalan@apple.com>
